<resources>
    <string name="app_name">JaBook</string>
    <string name="navigation_home">Главная</string>
    <string name="navigation_search">Поиск</string>
    <string name="navigation_library">Библиотека</string>
    <string name="navigation_player">Плеер</string>
    <string name="navigation_settings">Настройки</string>
    <string name="discovery">Обзор</string>
    <string name="downloads">Загрузки</string>
    <string name="player">Плеер</string>
    <string name="settings">Настройки</string>
    <string name="rutracker_title">RuTracker</string>
    <string name="rutracker_search">Поиск на RuTracker</string>
    <string name="rutracker_login">Вход в RuTracker</string>
    <string name="rutracker_logout">Выйти из RuTracker</string>
    <string name="rutracker_username">Имя пользователя</string>
    <string name="rutracker_password">Пароль</string>
    <string name="rutracker_login_button">Войти</string>
    <string name="rutracker_login_success">Вход выполнен успешно</string>
    <string name="rutracker_login_failed">Ошибка входа</string>
    <string name="domain_management">Управление доменами</string>
    <string name="domain_status">Статус доменов</string>
    <string name="domain_available">Доступен</string>
    <string name="domain_unavailable">Недоступен</string>
    <string name="domain_partial">Частично доступен</string>
    <string name="domain_auto_switch">Автопереключение доменов</string>
    <string name="domain_check_availability">Проверить доступность</string>
    <string name="domain_current">Текущий домен</string>
    <string name="domain_preferred">Предпочтительный домен</string>
    <string name="cache_management">Управление кэшем</string>
    <string name="cache_clear">Очистить кэш</string>
    <string name="cache_size">Размер кэша</string>
    <string name="cache_items">Элементов в кэше</string>
    <string name="cache_memory">Память</string>
    <string name="cache_disk">Диск</string>
    <string name="cache_ttl">Время жизни кэша</string>
    <string name="cache_max_size">Максимальный размер</string>
    <string name="cache_cleared">Кэш очищен</string>
    <string name="search_hint">Поиск аудиокниг…</string>
    <string name="search_results">Результаты поиска</string>
    <string name="search_no_results">Нет результатов</string>
    <string name="search_error">Ошибка поиска</string>
    <string name="search_retry">Повторить</string>
    <string name="search_fallback">Поиск недоступен, просмотр категорий</string>
    <string name="audiobook_details">Детали аудиокниги</string>
    <string name="audiobook_title">Название</string>
    <string name="audiobook_author">Автор</string>
    <string name="audiobook_narrator">Читает</string>
    <string name="audiobook_genre">Жанр</string>
    <string name="audiobook_duration">Продолжительность</string>
    <string name="audiobook_size">Размер</string>
    <string name="audiobook_description">Описание</string>
    <string name="audiobook_download">Скачать</string>
    <string name="audiobook_play">Слушать</string>
    <string name="audiobook_add_to_library">В библиотеку</string>
    <string name="audiobook_cover">Обложка аудиокниги</string>
    <string name="player_title">Плеер</string>
    <string name="player_now_playing">Сейчас играет</string>
    <string name="player_play">Играть</string>
    <string name="player_pause">Пауза</string>
    <string name="player_previous">Предыдущий</string>
    <string name="player_next">Следующий</string>
    <string name="player_speed">Скорость</string>
    <string name="player_sleep_timer">Таймер сна</string>
    <string name="player_progress">Прогресс</string>
    <string name="player_position">Позиция</string>
    <string name="player_duration">Длительность</string>
    <string name="library_title">Библиотека</string>
    <string name="library_empty">Библиотека пуста</string>
    <string name="library_add">Добавить</string>
    <string name="library_sort">Сортировка</string>
    <string name="library_filter">Фильтр</string>
    <string name="library_grid">Сетка</string>
    <string name="library_list">Список</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_general">Общие</string>
    <string name="settings_appearance">Внешний вид</string>
    <string name="settings_player">Плеер</string>
    <string name="settings_network">Сеть</string>
    <string name="settings_storage">Хранилище</string>
    <string name="settings_about">О приложении</string>
    <string name="settings_debug">Отладка</string>
    <string name="error_network">Ошибка сети</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_parse">Ошибка обработки данных</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_retry">Повторить попытку</string>
    <string name="error_report">Сообщить об ошибке</string>
    <string name="status_loading">Загрузка…</string>
    <string name="status_processing">Обработка…</string>
    <string name="status_downloading">Скачивание…</string>
    <string name="status_ready">Готово</string>
    <string name="status_offline">Офлайн</string>
    <string name="status_online">Онлайн</string>
    <string name="category_fiction">Художественная литература</string>
    <string name="category_non_fiction">Нон-фикшн</string>
    <string name="category_children">Детские аудиокниги</string>
    <string name="category_foreign">Зарубежные аудиокниги</string>
    <string name="category_educational">Познавательные аудиокниги</string>
    <string name="category_business">Бизнес и финансы</string>
    <string name="category_self_development">Саморазвитие и психология</string>
    <string name="category_religion">Религия и эзотерика</string>
    <string name="category_poetry">Поэзия и драматургия</string>
    <string name="permission_storage">Требуется доступ к хранилищу</string>
    <string name="permission_network">Требуется доступ к сети</string>
    <string name="permission_grant">Разрешить</string>
    <string name="permission_deny">Запретить</string>
    <string name="about_version">Версия %s</string>
    <string name="about_developer">Разработчик: JaBook Team</string>
    <string name="about_license">Лицензия: MIT</string>
    <string name="about_website">Веб-сайт: https://jabook.app</string>
    <string name="about_github">GitHub: https://github.com/jabook/jabook</string>
    <string name="debug_logs">Логи отладки</string>
    <string name="debug_export_logs">Экспортировать логи</string>
    <string name="debug_clear_logs">Очистить логи</string>
    <string name="debug_test_connection">Тест соединения</string>
    <string name="debug_test_parsing">Тест парсинга</string>
    <string name="debug_test_cache">Тест кэша</string>
    <string name="offline_mode">Офлайн режим</string>
    <string name="offline_enable">Включить офлайн режим</string>
    <string name="offline_disable">Отключить офлайн режим</string>
    <string name="offline_content">Офлайн контент</string>
    <string name="offline_downloads">Загрузки</string>
    <string name="offline_storage">Офлайн хранилище</string>
    <string name="performance_monitor">Монитор производительности</string>
    <string name="performance_memory">Использование памяти</string>
    <string name="performance_cpu">Использование CPU</string>
    <string name="performance_network">Сетевая активность</string>
    <string name="performance_optimization">Оптимизация</string>
    <string name="notification_download_complete">Загрузка завершена</string>
    <string name="notification_download_failed">Ошибка загрузки</string>
    <string name="notification_player_controls">Управление плеером</string>
    <string name="notification_new_content">Новый контент</string>
    <string name="time_seconds">%d сек</string>
    <string name="time_minutes">%d мин</string>
    <string name="time_hours">%d ч</string>
    <string name="time_days">%d д</string>
    <string name="size_bytes">%d Б</string>
    <string name="size_kb">%.1f КБ</string>
    <string name="size_mb">%.1f МБ</string>
    <string name="size_gb">%.1f ГБ</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_yes">Да</string>
    <string name="action_no">Нет</string>
    <string name="action_confirm">Подтвердить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_share">Поделиться</string>
    <string name="action_refresh">Обновить</string>
    <string name="action_settings">Настройки</string>
    <string name="action_help">Помощь</string>
    <string name="empty_search">Начните поиск аудиокниг</string>
    <string name="empty_library">Ваша библиотека пуста</string>
    <string name="empty_downloads">Нет загрузок</string>
    <string name="empty_player">Выберите аудиокнигу для прослушивания</string>
    <string name="loading_search">Поиск аудиокниг…</string>
    <string name="loading_library">Загрузка библиотеки…</string>
    <string name="loading_downloads">Загрузка загрузок…</string>
    <string name="loading_player">Загрузка плеера…</string>
    <string name="error_search_failed">Не удалось выполнить поиск</string>
    <string name="error_library_failed">Не удалось загрузить библиотеку</string>
    <string name="error_downloads_failed">Не удалось загрузить загрузки</string>
    <string name="error_player_failed">Не удалось загрузить плеер</string>
    <string name="success_download_complete">Загрузка завершена</string>
    <string name="success_added_to_library">Добавлено в библиотеку</string>
    <string name="success_settings_saved">Настройки сохранены</string>
    <string name="success_cache_cleared">Кэш очищен</string>
    <string name="warning_network_unavailable">Сеть недоступна</string>
    <string name="warning_storage_low">Мало места на устройстве</string>
    <string name="warning_battery_low">Низкий заряд батареи</string>
    <string name="warning_data_usage">Высокое использование данных</string>
    <string name="info_app_updated">Приложение обновлено</string>
    <string name="info_new_features">Новые функции доступны</string>
    <string name="info_maintenance">Техническое обслуживание</string>
    <string name="info_offline_mode">Офлайн режим активирован</string>
<string name="discovery_title">Обзор</string>
<string name="search_audiobooks">Поиск аудиокниг</string>
<string name="clear_search">Очистить поиск</string>
<string name="categories">Категории</string>
<string name="all_categories">Все категории</string>
<string name="no_search_results">Нет результатов поиска</string>
<string name="try_different_search_terms">Попробуйте другие поисковые запросы</string>
<string name="trending_audiobooks">Популярные аудиокниги</string>
<string name="recently_added">Недавно добавленные</string>
<string name="no_content_available">Нет доступного контента</string>
<string name="check_internet_connection">Проверьте интернет-соединение</string>
    <string name="downloads_title">Загрузки</string>
    <string name="clear_completed">Очистить завершенные</string>
    <string name="clear_failed">Очистить неудачные</string>
    <string name="no_active_downloads">Нет активных загрузок</string>
    <string name="start_downloading_discovery">Начните загрузку для обнаружения контента</string>
    <string name="no_completed_downloads">Нет завершенных загрузок</string>
    <string name="completed_downloads_appear_here">Завершенные загрузки появятся здесь</string>
    <string name="no_failed_downloads">Нет неудачных загрузок</string>
    <string name="great_no_download_errors">Отлично, нет ошибок загрузки</string>
    <string name="widget_subtitle_placeholder">Нет информации</string>
    <string name="cd_prev">Предыдущий трек</string>
    <string name="cd_play_pause">Воспроизведение/Пауза</string>
    <string name="cd_next">Следующий трек</string>
</resources>